objects/VPPSR_Search_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Search_By_Serial_Num_Resp_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search By Serial Num Resp Type</label>
        <referenceTo>VPPSR_Search_By_Serial_Num_Resp_Type__c</referenceTo>
        <relationshipName>Search_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>include_Archived__c</fullName>
        <label>include Archived</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>include_Current__c</fullName>
        <label>include Current</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>include_Expired__c</fullName>
        <label>include Expired</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>include_Removed__c</fullName>
        <label>include Removed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>point_In_Time_Date_Time__c</fullName>
        <label>point In Time Date Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serial_Number_Type__c</fullName>
        <label>serial Number Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serial_Number__c</fullName>
        <label>serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Search Criteria</label>
    <nameField>
        <displayFormat>VSC-{000000}</displayFormat>
        <label>Search Criteria  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Search Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>